# vronicle

./: Download errors.txt  LICENSE  README.md  README.txt  _config.yml  clean_server.sh  index.md  make_server.sh
FilterTestWithNativeC/: build.gradle  local.properties  settings.gradle
FilterTestWithNativeC/app/: build.gradle
FilterTestWithNativeC/app/src/main/cpp/: CMakeLists.txt  RawBase.h  TCPClient.cpp  client.cpp  metadata.h  native-lib.cpp
Linux/sgx/: buildenv.mk
baseline/: .gitignore  README.md  build.sh
baseline/all_in_one/: Makefile  SampleFilters.h  TestApp.cpp  TestApp.h
baseline/client_side/: .gitignore  Makefile  run_take_yuyv_frames.sh
baseline/common/: metadata.h
baseline/decoder/: Makefile  TestApp.cpp  TestApp.h  minimp4.h
baseline/encoder/: EncoderApp.cpp  EncoderApp.h  Makefile  minih264e.h  minimp4.h
baseline/filter_blur/: .gitignore  Makefile  TestApp.cpp  TestApp.h
baseline/filter_brightness/: ImageProcessing.h  TestApp.cpp
baseline/filter_denoise_easy/: Color.cpp  Color.h  ImageProcessing.cpp  TestApp.cpp
baseline/filter_gray/: TestApp.cpp
baseline/filter_sharpen/: Makefile  TestApp.cpp
baseline/filter_white_balance/: TestApp.cpp
baseline/scheduler/: Makefile  scheduler.cpp  scheduler.h
baseline/simple_filter_performance_test/: a.out
baseline/tcp_module/: TCPClient.cpp  TCPServer.cpp  TCPServer.h
client_side/: .gitignore  Makefile  README.md  a.out  camera_sign  filter1_out1_sign  filter1_out1_sign_useless  filter_framework  filter_framework.cpp  generate_new_key_pair  generate_new_key_pair.cpp  init_run.sh  jpeg_to_raw  jpeg_to_raw.c  make_certificate  make_certificate.cpp  multi_pixel_color_filters.h  raw_def.h  raw_to_jpeg  raw_to_jpeg.c  read_hash.cpp  rsa_sign  rsa_sign.cpp  run_take_yuyv_frames.sh  single_pixel_color_filters.h  take_photo  take_photo(not working).cpp  take_photo.c  take_yuyv_frames  take_yuyv_frames.c  test_run_abandoned.sh  test_verify.cpp
decoder/: a.out  enclave_test.c
encoder/: README.md  h264enc_x64  h264enc_x86  h264enc_x86_sse2  minih264e_test.c
evaluation/: decoder_plot_one.py  enclave_init.py  enclave_init_plot.py  encoder_plot_multi.py  encoder_plot_one.py  filter_eval_plot.py  filter_only_eval_plot.py  filter_plot_multi.py  filter_plot_one.py  filter_total_plot.py  scheduler_plot.py
minimp4/: minimp4.h  minimp4_test.c
openssl_source/: rand_lib.c
scheduler/: Makefile  scheduler  scheduler.cpp  scheduler.h  temp_test.sh
sgx_enabled/: clean_server.sh  make_server.sh
sig_verify/: sig_verify  sig_verify.d  verifier.d  verifier.h
tcp_server/: Makefile  TCPServer.cpp  TCPServer.h  init_server.sh  out.264  server  server.cpp
viewer/: Makefile  build_viewer.sh  openssl-ra-challenger.c  run_viewer.sh  sig_verify.cpp  verification_with_gui.py  verifier.cpp  verifier.h
(+2024 files in other folders)
